@@ -266,6 +266,15 @@ class TestParameter:
         q = possibly_create_parameter(0.5 * p)
         assert isinstance(q, _BinaryOp)
 
+    def test_dependencies(self):
+        p1 = Parameter(1, 'p1', vary=True)
+        p2 = Parameter(2, 'p2', vary=False)
+
+        p_dep = p1 + p2
+        p_dep2 = p1 + p_dep
+
+        assert p_dep2.dependencies() == [p1, p2]
+
 
 class TestParameters:
     def setup_method(self):
@@ -326,6 +335,16 @@ class TestParameters:
         self.b.vary = True
         p = self.a | self.b | self.a
         assert_equal(len(p.varying_parameters()), 2)
+
+    def test_varying_parameters_with_dependencies(self):
+        p1 = Parameter(1, 'p1', vary=True)
+        p2 = Parameter(2, 'p2', vary=False)
+        p3 = Parameter(3, 'p3', vary=False)
+        p4 = Parameter(4, 'p4', vary=True)
+
+        p_dep = p1 + p2
+        pars = Parameters([p2, p3, p4, p_dep])
+        assert pars.varying_parameters() == [p4, p1]
 
     def test_pickle_parameters(self):
         # need to check that Parameters can be pickled/unpickle
